Remove old CSS filter. kurmi's code goes from the old filter and the history is very confusing, so I am going to just copy the code and review the final code.

--- a/build.xml
+++ b/build.xml
@@ -22,12 +22,7 @@
 	<property name="recommendedExtVersion" value="-1"/>
 	<property name="version.src" value="freenet/node/Version.java" />
 	<property name="version.build" value="freenet/node/Version.class" />
-	<property name="CSSTokenizerFilter.relative.jflex" value="freenet/clients/http/filter/CSSTokenizerFilter.jflex"/>
-	<property name="CSSTokenizerFilter.java" value="${src}/freenet/clients/http/filter/CSSTokenizerFilter.java"/>
 	<property name="junit.location" value="/usr/share/java/junit.jar"/>
-	<condition property="executable" value="jflex.bat" else="jflex">
-		<os family="windows"/>
-	</condition>
 
 	<path id="lib.path">
 		<pathelement location="${freenet-ext.location}"/>
@@ -64,17 +59,7 @@
 
 	<target name="env" depends="mkdir"   description="Learn about the environment">
 		<available file="${lib}/freenet-ext.jar" property="freenet-ext.present"/>
-		<available file="${CSSTokenizerFilter.java}" property="CSSTokenizerFilter.present"/>
 		<available file="${junit.location}" property="junit.present"/>
-	</target>
-
-	<target name="generate-CSSTokenizerFilter" depends="env" unless="CSSTokenizerFilter.present">
-		<echo message="Generating CSSTokenizerFilter.java"/>
-		<exec dir="${src}" executable="${executable}" failonerror="true" resolveexecutable="true">
-			<arg value="-q"/>
-			<arg value="--nobak"/>
-			<arg value="${CSSTokenizerFilter.relative.jflex}"/>
-		</exec>
 	</target>
 
 	<target name="get-extjar" depends="env" unless="freenet-ext.present"
@@ -89,7 +74,7 @@
 
 	<!-- ================================================== -->
 
-	<target name="compile" depends="get-extjar, generate-CSSTokenizerFilter">
+	<target name="compile" depends="get-extjar">
 		<!-- Create the time stamp -->
 		<tstamp/>
 
@@ -212,7 +197,6 @@
 		<delete dir="${build-test}"/>
 	</target>
 	<target name="distclean" description="Delete class files, lib dir and docs dir.">
-		<delete file="${CSSTokenizerFilter.java}"/>
 		<delete dir="${build}"/>
 		<delete dir="${build-test}"/>
 		<delete dir="${lib}"/>
