eclipse toolchain does unit tests by default now, set 'force_tests' to false in build.properties to turn this off.

--- a/build.xml
+++ b/build.xml
@@ -82,7 +82,7 @@
 	<condition property="do.junit" value="true">
 		<and>
 			<or>
-				<isset property="force_tests" />
+				<istrue value="${force_tests}" />
 				<not>
 					<isset property="skip_tests" />
 				</not>
