remove all deprecated stuff

--- a/build.xml
+++ b/build.xml
@@ -222,7 +222,7 @@
 
 
 	<target name="javadoc">
-		<javadoc sourcepath="${src}" destdir="${javadoc}">
+		<javadoc sourcepath="${src}" destdir="${javadoc}" use="true">
 			<fileset dir="${src}" includes="**/*.java" />
 			<classpath>
 				<pathelement location="${freenet-ext.location}"/>
