Fix BMP copying
Copy BMPs to their test location. Don't filter errors, if they
can't be found.

--- a/build.xml
+++ b/build.xml
@@ -217,6 +217,9 @@
 		<copy todir="${build-test}/freenet/client/filter/png">
 			<fileset dir="${test}/freenet/client/filter/png"/>
 		</copy>
+		<copy todir="${build-test}/freenet/client/filter/bmp">
+			<fileset dir="${test}/freenet/client/filter/bmp"/>
+		</copy>
 	</target>
 
 	<target name="unit" depends="unit-build" if="do.junit">
