Add skeleton for a class which can be used for obtaining language information from the ISO639-3 code. ISO639-3 is the most recent, finished ISO list of language names and will be used by Freetalk for obtaining board language codes.

--- a/build.xml
+++ b/build.xml
@@ -170,6 +170,7 @@
 		<copy todir="${build}/freenet/l10n">
 			<fileset dir="${src}/freenet/l10n">
 				<include name="freenet.l10n.*.properties"/>
+				<include name="freenet.l10n.*.tab"/>
 			</fileset>
 		</copy>
 
