--- a/build.xml
+++ b/build.xml
@@ -81,9 +81,9 @@ of speech, and without decentralization the network would be vulnerable to attac
 
 	<target name="dist" depends="clean-all, all" description="clean-build everything"/>
 
-	<target name="all" depends="package, doc" description="build everything"/>
+	<target name="all" depends="package, doc" description="build everything, incl. docs and deps* (ext, gjs)"/>
 
-	<target name="clean-all" depends="clean, clean-doc, clean-gjs, clean-ext" description="clean all build products *and dependencies* (ext, gjs)"/>
+	<target name="clean-all" depends="clean, clean-doc, clean-gjs, clean-ext" description="clean all build products"/>
 
 	<target name="help" description="display help on parameters">
 		<echo message="For main build targets, see `ant -p`"/>
@@ -139,13 +139,9 @@ of speech, and without decentralization the network would be vulnerable to attac
 		<!-- Create the build directory structure used by compile -->
 		<javac srcdir="${main.src}" destdir="${main.make}" debug="on" optimize="on" source="1.5" target="1.5">
 			<compilerarg line="${javac.args}"/>
+			<classpath><path refid="lib.path"/></classpath>
 			<!-- tell javac to find Version.java in ${main.make}, not ${main.src} -->
-			<sourcepath>
-				<pathelement path="${main.make}"/>
-			</sourcepath>
-			<classpath>
-				<path refid="lib.path"/>
-			</classpath>
+			<sourcepath><pathelement path="${main.make}"/></sourcepath>
 			<!-- following a very temporary list of files to be build -->
 			<include name="freenet/**/*.java"/>
 			<include name="net/i2p/util/*.java"/>
@@ -157,9 +153,7 @@ of speech, and without decentralization the network would be vulnerable to attac
 		<!-- Force compile of Version.java in case compile of ${main.src} didn't trigger it -->
 		<javac srcdir="${main.make}" destdir="${main.make}" debug="on" optimize="on" source="1.5" target="1.5">
 			<compilerarg line="${javac.args}"/>
-			<classpath>
-				<path refid="lib.path"/>
-			</classpath>
+			<classpath><path refid="lib.path"/></classpath>
 			<include name="${version.src}"/>
 		</javac>
 
@@ -176,7 +170,7 @@ of speech, and without decentralization the network would be vulnerable to attac
 		</copy>
 	</target>
 
-	<target name="package" depends="build, unit" description="build standard components (Freenet daemon)" >
+	<target name="package" depends="build, unit" description="build standard binary packages (Freenet daemon)" >
 		<jar jarfile="${lib}/freenet-cvs-snapshot.jar" basedir="${main.make}">
 			<manifest>
 				<attribute name="Main-Class" value="freenet/node/Node"/>
@@ -241,7 +235,7 @@ of speech, and without decentralization the network would be vulnerable to attac
 		</junit>
 	</target>
 
-	<target name="clean" description="clean standard build products">
+	<target name="clean" description="clean standard binary packages">
 		<delete dir="${main.make}"/>
 		<delete dir="${main.dst}"/>
 		<delete dir="${test.make}"/>
