--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,24 @@
-test.skip=false
+##
+# Properties you can set to affect the build process.
+#
+# This file contains default values that are checked-in to version control.
+#
+# End users should not edit this file to set machine-specific properties;
+# instead, create a new file called override.properties and set them there.
+#
+
+# Directory to user JAR libraries
+java.class.dirs.user=/usr/share/java
+
+# Suppression of dependency building
+suppress.gjs=false
+suppress.ext=false
+
+# Javac
 javac.args=-Xlint
+
+# Test properties
+test.skip=false
+test.verbose=false
+test.benchmark=false
+test.extensive=false
