- fix default suppress properties

--- a/build.properties
+++ b/build.properties
@@ -11,8 +11,10 @@
 java.class.dirs.user=/usr/share/java
 
 # Suppression of dependency building
-suppress.gjs=false
-suppress.ext=false
+# Note: if these are set to true (as opposed to unset) then build-{ext,gjs}
+# will automatically skip themselves, even when specified on the command line.
+#suppress.gjs=false
+#suppress.ext=false
 
 # Javac
 javac.args=-Xlint
