Revert "Merge commit 'origin/build-scripts'"
This reverts commit 155920a2839f0aff9a97f0c5dde9865c0581e47b, reversing
changes made to a52921fbf896fe47d6a0f75571d653cc1a4aeeaf.

Conflicts:

	README.clean-build

--- a/build.properties
+++ b/build.properties
@@ -1,26 +1,1 @@
-##
-# Properties you can set to affect the build process.
-#
-# This file contains default values that are checked-in to version control.
-#
-# End users should not edit this file to set machine-specific properties;
-# instead, create a new file called override.properties and set them there.
-#
-
-# Directory to user JAR libraries
-java.class.dirs.user=/usr/share/java
-
-# Suppression of dependency building
-# Note: if these are set to true (as opposed to unset) then build-{ext,gjs}
-# will automatically skip themselves, even when specified on the command line.
-#suppress.gjs=false
-#suppress.ext=false
-
-# Javac
-javac.args=-Xlint
-
-# Test properties
-test.skip=false
-test.verbose=false
-test.benchmark=false
-test.extensive=false
+skip_tests=false
