build.xml: simpler suppress behaviour, along with explanatory message

--- a/build.properties
+++ b/build.properties
@@ -11,10 +11,8 @@
 java.class.dirs.user=/usr/share/java
 
 # Suppression of dependency building
-# Note: if these are set to true (as opposed to unset) then build-{ext,gjs}
-# will automatically skip themselves, even when specified on the command line.
-#suppress.gjs=false
-#suppress.ext=false
+suppress.gjs=true
+suppress.ext=true
 
 # Javac
 javac.args=-Xlint
