split much of build.xml into build-clean.xml
- freenet.jar is now saved into dist/ rather than lib/
- build.xml works pretty much the same as the previous commit
- build-clean.xml provides a scripting-dependency-free method of clean-building fred (including GWT js, but excluding contrib)
- see README.clean-build and `ant -p` (of both files) for more details

--- a/build.properties
+++ b/build.properties
@@ -10,9 +10,8 @@
 # Directory to user JAR libraries
 java.class.dirs.user=/usr/share/java
 
-# Suppression of dependency building
-suppress.gjs=true
-suppress.ext=true
+# Directory to contrib repo
+contrib.dir=../contrib/freenet_ext
 
 # Javac
 javac.args=-Xlint
@@ -22,3 +21,7 @@ test.skip=false
 test.verbose=false
 test.benchmark=false
 test.extensive=false
+
+# Suppress non-standard components. Default is to suppress external packages
+suppress.gjs=false
+suppress.ext=true
