--- a/build.properties
+++ b/build.properties
@@ -25,3 +25,7 @@ test.extensive=false
 # Suppress non-standard components. Default is to suppress external packages
 suppress.gjs=false
 suppress.ext=true
+
+# Hack around property expansion not featured in ant <= 1.7.1
+# see http://ant.apache.org/manual/properties.html#if+unless
+true=true
