Document how to skip javadoc building

--- a/build.properties
+++ b/build.properties
@@ -22,6 +22,9 @@ test.verbose=false
 test.benchmark=false
 test.extensive=false
 
+# Build javadoc
+doc.skip=false
+
 # Suppress non-standard components. Default is to suppress external packages
 suppress.gjs=false
 suppress.ext=true
