add a findbugs target to ant

--- a/build.properties
+++ b/build.properties
@@ -58,6 +58,9 @@ gjs.lib.jars = null
 #gjs.lib.jars = gwt-dev-linux.jar gwt-dev-windows.jar gwt-dev.jar gwt-user.jar \
 # commons-collections3.jar ant.jar eclipse-ecj.jar
 
+findbugs.dir = findbugs
+findbugs.path = ${findbugs.dir}/lib/findbugs-ant.jar
+
 ################################################################################
 ## build tool options
 
@@ -75,6 +78,9 @@ test.extensive=false
 
 # Build javadoc
 doc.skip=false
+
+# Run findbugs
+findbugs.skip=false
 
 ################################################################################
 ## misc options
