Turn off findbugs by default. It's not even packaged in debian, so most devs won't have it.

--- a/build.properties
+++ b/build.properties
@@ -80,7 +80,7 @@ test.extensive=false
 doc.skip=false
 
 # Run findbugs
-findbugs.skip=false
+findbugs.skip=true
 
 ################################################################################
 ## misc options
