Default target should be "package", revert previous commit.

--- a/build.properties
+++ b/build.properties
@@ -80,7 +80,7 @@ test.extensive=false
 doc.skip=false
 
 # Run findbugs
-findbugs.skip=true
+findbugs.skip=false
 
 ################################################################################
 ## misc options
