add a PMD target to ant

--- a/build.properties
+++ b/build.properties
@@ -61,6 +61,7 @@ gjs.lib.jars = null
 findbugs.dir = findbugs
 findbugs.path = ${findbugs.dir}/lib/findbugs-ant.jar
 
+pmd.dir = pmd
 ################################################################################
 ## build tool options
 
